Squash - Partway through socketio before swapping to bugs

--- a/tests/loadtesting/csr-socket-load-test.yaml
+++ b/tests/loadtesting/csr-socket-load-test.yaml
@@ -10,16 +10,37 @@ config:
     - duration: 3
       arrivalRate: 1
       name: Warm up
-    - duration: 30
-      arrivalRate: 10
-      name: Ramp up load
+    # - duration: 30
+    #   arrivalRate: 10
+    #   name: Ramp up load
   variables:
     greeting: ["hello", "goedemorgen", "добрый день", "guten tag", "bonjour", "hola"]
   processor: "./functions.js"
 
 scenarios:
-  - name: "(HTTP) CSR – Authenticated api route"
+  # - name: "(HTTP) CSR – Authenticated api route"
+  #   beforeRequest: 'setAuthHeader'
+  #   weight: 75
+  #   flow:
+  #     # - get:
+  #     #   - url: "/queue"
+  #     # TODO - Rest of requests, there's at least 5
+  #     - get:
+  #         url: "/api/v1/citizens/"
+  #     - think: 1
+  # - name: "(Citizen)(HTTP) Unauthenticated public API routes"
+  #   weight: 75
+  #   flow:
+  #     - get:
+  #         # url: "/api/v1/services/refresh/?office_id=3"
+  #         url: "/api/v1/offices/1/slots/?service_id=1"
+  #     - think: 1
+
+
+
+  - name: "CSR - Websockets"
     beforeRequest: 'setAuthHeader'
+    engine: "socketio"
     weight: 75
     flow:
       # - get:
@@ -28,13 +49,33 @@ scenarios:
       - get:
           url: "/api/v1/citizens/"
       - think: 1
-  - name: "(Citizen)(HTTP) Unauthenticated public API routes"
-    weight: 75
-    flow:
-      - get:
-          # url: "/api/v1/services/refresh/?office_id=3"
-          url: "/api/v1/offices/1/slots/?service_id=1"
-      - think: 1
+
+    # - name: "CSR - Socket Connection"
+    #   engine: "socketio"
+    #   beforeRequest: 'setAuthHeader'
+    #   flow:
+    #     - get:
+    #         url: "/api/v1/citizens/"
+        # - emit:
+        #     channel: "joinRoom"
+        #     data: "hello"
+        #     response:
+        #       channel: "echoed"
+        #       data: "hello"
+        # - emit:
+        #     channel: "echo"
+        #     data: "world"
+        #     response:
+        #       channel: "echoed"
+        #       data: "world"
+        # - think: 1
+        # - emit:
+        #     channel: "echo"
+        #     data: "do not care about the response"
+        # - emit:
+        #     channel: "echo"
+        #     data: "still do not care about the response"
+        # - think: 1
 
 
 
