--- a/tests/loadtesting/csr-http-load-test-appointments.yaml
+++ b/tests/loadtesting/csr-http-load-test-appointments.yaml
@@ -10,8 +10,8 @@ config:
     # - duration: 3
     #   arrivalRate: 1
     #   name: Warm up
-    - duration: 30
-      arrivalRate: 10
+    - duration: 3
+      arrivalRate: 1
       name: Ramp up load
   variables:
   processor: "./functions.js"
@@ -31,7 +31,23 @@ scenarios:
           url: "/api/v1/channels/"
       - get:
           url: "/api/v1/services/?office_id=1"
-
+      - log: "exam_types running"
+      - get:
+          url: "/api/v1/exam_types/"
+      - log: "post draft appointment running"
+      - post:
+          url: "/api/v1/appointments/draft"
+          json:
+            start_time: "2020-10-28T15:30:00Z"
+            end_time: "2020-10-28T15:45:00.000Z"
+            office_id: 5
+      #     capture:
+      #       json: "$.appointmentid"
+      #       as: "appointment"
+      #     strict: false # We don't mind if id can't be captured and the next requests 404s
+      # - log: "delet  draft appointment {{appointment}} running"
+      # - delete:
+      #   url: "/api/v1/appointments/draft/{{appointment}}"
 
 
 # TODO - Add SocketIO tests --  
