--- a/tests/loadtesting/csr-http-load-test-appointments.yaml
+++ b/tests/loadtesting/csr-http-load-test-appointments.yaml
@@ -34,13 +34,40 @@ scenarios:
       - log: "exam_types running"
       - get:
           url: "/api/v1/exam_types/"
-      - log: "post draft appointment running"
+      - log: "post appointments appointment running"
       - post:
-          url: "/api/v1/appointments/draft"
+          # url: "/api/v1/appointments/draft"
+          url: "/api/v1/appointments/"
           json:
-            start_time: "2020-10-28T15:30:00Z"
-            end_time: "2020-10-28T15:45:00.000Z"
-            office_id: 5
+            start_time: "2020-11-05T17:45:00Z"
+            end_time: "2020-11-05T18:00:00Z"
+            service_id: 21
+            citizen_name: "name from test"
+            contact_information: ""
+            office_id: 7
+            appointment_draft_id: 1
+          capture:
+            json: "$.appointment.appointment_id"
+            as: "appointment_id"
+          strict: false # We don't mind if id can't be captured and the next requests 404s
+      - log: "updating appointment {{appointment_id}} running"
+      - put:
+          url: "/api/v1/appointments/{{appointment_id}}/"
+          json:
+            start_time: "2020-11-05T17:45:00Z"
+            end_time: "2020-11-05T18:00:00Z"
+            service_id: 21
+            citizen_name: "updated name from test"
+            contact_information: ""
+            office_id: 7
+            appointment_draft_id: 1
+          capture:
+            json: "$.appointment.appointment_id"
+            as: "updateappointment_id"
+          strict: false # We don't mind if id can't be captured and the next requests 404s
+      - log: "delet appointment {{updateappointment_id}} running"
+      - delete:
+          url: "/api/v1/appointments/{{appointment_id}}/"
       #     capture:
       #       json: "$.appointmentid"
       #       as: "appointment"
