--- a/tests/loadtesting/csr-test-all.yaml
+++ b/tests/loadtesting/csr-test-all.yaml
@@ -21,13 +21,14 @@ config:
   processor: "./functions.js"
 
 scenarios:
+
+  # This must be a separate scenario as it uses a different engine (socketio).
   - name: "CSR - Websockets"
     beforeRequest: 'setAuthHeader'
     engine: "socketio"
 
     weight: 75
     flow:
-      - log: " socket connectiong starting"
       - emit:
           channel: "connect"
           data: "ping"
@@ -35,13 +36,13 @@ scenarios:
       - emit:
           channel: "joinRoom"
           data: "joinRoom"
-      - log: "joinRoom socket"
       - think: 1
 
-  - name: "CSR – Login, load data, idle."
+  # Main scenario for CSRs who login, review information, but don't write to DB.
+  - name: "CSR – Login, load data, idle"
     beforeRequest: 'setAuthHeader'
     weight: 75
-    flow:
+    flow: &csrLoadData
       - get:
           url: "/api/v1/citizens/"
       - get:
@@ -52,71 +53,64 @@ scenarios:
           url: "/api/v1/channels/"
       - get:
           url: "/api/v1/services/?office_id=1"
-      - log: "exam_types running"
       - get:
           url: "/api/v1/exam_types/"
-  # - name: "CSR – Create  and delete appointments."
-  #   beforeRequest: 'setAuthHeader'
-  #   weight: 75
-  #   flow:
-  #     - get:
-  #         url: "/api/v1/citizens/"
-  #     - get:
-  #         url: "/api/v1/appointments/"
-  #     - get:
-  #         url: "/api/v1/categories/"
-  #     - get:
-  #         url: "/api/v1/channels/"
-  #     - get:
-  #         url: "/api/v1/services/?office_id=1"
-  #     - log: "exam_types running"
-  #     - get:
-  #         url: "/api/v1/exam_types/"
-  #     - log: "creating draft appointmen running"
-  #     - post:
-  #         url: "/api/v1/appointments/draft"
-  #         json:
-  #           start_time: "2020-11-05T18:00:00Z"
-  #           end_time: "2020-11-05T18:15:00Z"
-  #           office_id: 7
-  #         capture:
-  #           json: "$.appointment.appointment_id"
-  #           as: "draftappointment_Id"
-  #         strict: false # We don't mind if id can't be captured and the next requests 404s
-  #     - log: "deleting appointment {{draftappointment_Id}} running"
-  #     - delete:
-  #         url: "/api/v1/appointments/draft/{{draftappointment_Id}}/"
-  #     - log: "post appointments appointment running"
-  #     - post:
-  #         # url: "/api/v1/appointments/draft"
-  #         url: "/api/v1/appointments/"
-  #         json:
-  #           start_time: "2020-11-05T18:00:00Z"
-  #           end_time: "2020-11-05T18:15:00Z"
-  #           service_id: 21
-  #           citizen_name: "name from test"
-  #           contact_information: ""
-  #           office_id: 7
-  #           appointment_draft_id: 1
-  #         capture:
-  #           json: "$.appointment.appointment_id"
-  #           as: "appointment_id"
-  #         strict: false # We don't mind if id can't be captured and the next requests 404s
-  #     - log: "updating appointment {{appointment_id}} running"
-  #     - put:
-  #         url: "/api/v1/appointments/{{appointment_id}}/"
-  #         json:
-  #           start_time: "2020-11-05T18:00:00Z"
-  #           end_time: "2020-11-05T18:15:00Z"
-  #           service_id: 21
-  #           citizen_name: "updated name from test"
-  #           contact_information: ""
-  #           office_id: 7
-  #           appointment_draft_id: 1
-  #         capture:
-  #           json: "$.appointment.appointment_id"
-  #           as: "updateappointment_id"
-  #         strict: false # We don't mind if id can't be captured and the next requests 404s
-  #     - log: "delet appointment {{updateappointment_id}} running"
-  #     - delete:
-  #         url: "/api/v1/appointments/{{appointment_id}}/"
+  
+  # Main scenarios for CSRs who login and create/delete an appointment. 
+  # Copies same flow from idle CSRs above.
+  - name: "CSR – Create and delete appointments."
+    beforeRequest: 'setAuthHeader'
+    weight: 75
+    flow:
+      # Copy the same flow for idle CSRs, and just add more steps
+      - *csrLoadData
+      - get:
+          url: "/api/v1/exam_types/"
+      - log: "creating draft appointmen running"
+      - post:
+          url: "/api/v1/appointments/draft"
+          json:
+            start_time: "2020-11-05T18:00:00Z"
+            end_time: "2020-11-05T18:15:00Z"
+            office_id: 7
+          capture:
+            json: "$.appointment.appointment_id"
+            as: "draftappointment_Id"
+          strict: false # We don't mind if id can't be captured and the next requests 404s
+      - log: "deleting appointment {{draftappointment_Id}} running"
+      - delete:
+          url: "/api/v1/appointments/draft/{{draftappointment_Id}}/"
+      - log: "post appointments appointment running"
+      - post:
+          # url: "/api/v1/appointments/draft"
+          url: "/api/v1/appointments/"
+          json:
+            start_time: "2020-11-05T18:00:00Z"
+            end_time: "2020-11-05T18:15:00Z"
+            service_id: 21
+            citizen_name: "name from test"
+            contact_information: ""
+            office_id: 7
+            appointment_draft_id: 1
+          capture:
+            json: "$.appointment.appointment_id"
+            as: "appointment_id"
+          strict: false # We don't mind if id can't be captured and the next requests 404s
+      - log: "updating appointment {{appointment_id}} running"
+      - put:
+          url: "/api/v1/appointments/{{appointment_id}}/"
+          json:
+            start_time: "2020-11-05T18:00:00Z"
+            end_time: "2020-11-05T18:15:00Z"
+            service_id: 21
+            citizen_name: "updated name from test"
+            contact_information: ""
+            office_id: 7
+            appointment_draft_id: 1
+          capture:
+            json: "$.appointment.appointment_id"
+            as: "updateappointment_id"
+          strict: false # We don't mind if id can't be captured and the next requests 404s
+      - log: "delet appointment {{updateappointment_id}} running"
+      - delete:
+          url: "/api/v1/appointments/{{appointment_id}}/"
